[package]
name = "odom_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
anyhow = "1.0.43"
rclrust = { path = "../../../git_repos/rclrust/rclrust", features = ["galactic"] }
rclrust-msg = { path = "../../../git_repos/rclrust/rclrust-msg"}

tokio = { version = "1", features = ["full"] }